tests/NormalTests/paczka1/small_fuzzy/46884832.err
Error in line 1: ag8ngQiarrb A653 11,5
Error in line 3: EwRZlkbm4 A345 73,7
Error in line 2: ag8ngQiarrb A606 60,8
Error in line 6: EwRZlkbm4 A606 36,8
Error in line 10: A345 A345 21,4
Error in line 13: ag8ngQiarrb A606 86,1
Error in line 14: ag8ngQiarrb A969 3,4
Error in line 15: ag8ngQiarrb A345 31,2
